--- a/web/index.html
+++ b/web/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
-    HELLO
+    <vr-code>
+      <vr-code-keyboard-controller></vr-code-keyboard-controller>
+      <vr-code-scope></vr-code-scope>
+    </vr-code>
   </body>
 </html>
