--- a/web/index.html
+++ b/web/index.html
@@ -1,16 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>VR Code</title>
-    <script src="./js/vr-code/main.js" type="module"></script>
-    <link rel="stylesheet" href="./css/main.css" />
-  </head>
-  <body>
-    <vr-code>
-      <vr-code-keyboard-controller></vr-code-keyboard-controller>
-      <vr-code-scope></vr-code-scope>
-    </vr-code>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>VR Code</title>
+  <script defer src="./js/vr-code/main.js" type="module"></script>
+  <link rel="stylesheet" href="./css/main.css" />
+</head>
+
+<body>
+  <article>
+    <header>
+      <h2>Actions</h2>
+    </header>
+
+    <template id="action-template">
+      <div class="action">
+        <div class="action-name"></div>
+        <div class="action-description"></div>
+        <div class="action-keybinds"></div>
+      </div>
+    </template>
+
+    <template id="action-keybind-template">
+      <div class="action-keybind"></div>
+    </template>
+
+    <main class="action-list"></main>
+  </article>
+</body>
+
 </html>
